<?xml version="1.0" encoding="utf-8"?>
<!--
     SPDX-FileCopyrightText: 2026 The LineageOS Project
     SPDX-License-Identifier: Apache-2.0
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:title="@string/category_lighting_title">

    <ListPreference
        android:key="led_effect"
        android:title="@string/led_effect_title"
        android:entries="@array/led_effect_entries"
        android:entryValues="@array/led_effect_values"
        android:defaultValue="none"
        android:summary="%s" />

    <ListPreference
        android:key="led_color"
        android:title="@string/led_color_title"
        android:entries="@array/led_color_entries"
        android:entryValues="@array/led_color_values"
        android:defaultValue="#FFFFFF"
        android:summary="%s" />

    <SeekBarPreference
        android:key="led_brightness"
        android:title="@string/led_brightness_title"
        android:max="100"
        android:defaultValue="100"
        app:min="5"
        app:showSeekBarValue="true" />

    <SwitchPreferenceCompat
        android:key="led_only_in_games"
        android:title="@string/led_only_in_games_title"
        android:summary="@string/led_only_in_games_summary"
        android:defaultValue="false" />

    <SwitchPreferenceCompat
        android:key="led_on_call"
        android:title="@string/led_on_call_title"
        android:summary="@string/led_on_call_summary"
        android:defaultValue="false" />

    <SwitchPreferenceCompat
        android:key="led_charging_light"
        android:title="@string/led_charging_light_title"
        android:summary="@string/led_charging_light_summary"
        android:defaultValue="true" />

</PreferenceScreen>
